Fix scroll to start off-screen

--- a/src/Sidebar/styles.scss
+++ b/src/Sidebar/styles.scss
@@ -1,5 +1,4 @@
 .sideBar {
-  /*display: inline-block;*/
   display: flex;
   position: fixed;
   height: 100%;
@@ -16,19 +15,19 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  position: relative;
+  position: absolute;
   text-align: justify;
-  top: -100px;
-  animation: container 60s linear;
+  line-height: 120%;
+  animation: container 30s linear;
 }
 
 @keyframes container {
   0% {
-    top: 0px;
+    top: 95%;
   }
 
   100% {
-    top: -1000px;
+    top: 0;
   }
 }
 
